Fixed text-align of hero

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -442,6 +442,7 @@ section {
   color: #444444;
   margin: 0 0 0 0;
   font-size: 26px;
+    text-align: justify;
 }
  .hero h2 span{
 
